THSIS-19: add user id param to test campaign
